{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 234,
  "lineage": "a13c9c9e-6ce7-d942-ceff-56dc1d26b059",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "prj2_mahi_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016b89be0b32fe96e",
            "association_id": "eipassoc-005ef27c3dc4cddf2",
            "domain": "vpc",
            "id": "eipalloc-016b89be0b32fe96e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03de95f7a8fae2b8e",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-44-195-238-58.compute-1.amazonaws.com",
            "public_ip": "44.195.238.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prj2_mahi_rds_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8a34246278c21e4",
            "arn": "arn:aws:ec2:us-east-1:878062643785:instance/i-011e05492c6d0a6bd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011e05492c6d0a6bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prj2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-009aed2074c14ed42",
            "private_dns": "ip-10-0-0-20.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a08a58464b28bc60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a38d67164ae89555",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0a755d99a50ec08"
            ]
          },
          "dependencies": [
            "aws_security_group.prj2_mahi_rds",
            "aws_subnet.prj2_mahi_pvt_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prj2_mahi_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e8a34246278c21e4",
            "arn": "arn:aws:ec2:us-east-1:878062643785:instance/i-023cf3ad81b634243",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023cf3ad81b634243",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prj2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0401767c774b141eb",
            "private_dns": "ip-10-0-0-8.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_ip": "34.205.133.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db984e5fc74208de",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-077fb99ff250f0749",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e7ab40b5f31e9cda"
            ]
          },
          "dependencies": [
            "aws_security_group.http-ssh",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prj2_mahi_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:internet-gateway/igw-024ea4619662f6522",
            "id": "igw-024ea4619662f6522",
            "owner_id": "878062643785",
            "tags": {
              "Name": "PRJ2_IGW"
            },
            "tags_all": {
              "Name": "PRJ2_IGW"
            },
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "prj2_mahi_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878062643785:loadbalancer/app/prj2-alb/22545019a483e9ce",
            "arn_suffix": "app/prj2-alb/22545019a483e9ce",
            "desync_mitigation_mode": "defensive",
            "dns_name": "prj2-alb-1784206551.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:878062643785:loadbalancer/app/prj2-alb/22545019a483e9ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prj2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e7ab40b5f31e9cda"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-077fb99ff250f0749"
              },
              {
                "subnet_id": "subnet-0a38d67164ae89555"
              }
            ],
            "subnets": [
              "subnet-077fb99ff250f0749",
              "subnet-0a38d67164ae89555"
            ],
            "vpc_id": "vpc-07a0843128da2402b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.http-ssh",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_subnet.prj2_mahi_pvt_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "prj2_mahi_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878062643785:targetgroup/my-target-group/94c137c9cc56b3cd",
            "arn_suffix": "targetgroup/my-target-group/94c137c9cc56b3cd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878062643785:targetgroup/my-target-group/94c137c9cc56b3cd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_atch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:878062643785:targetgroup/my-target-group/94c137c9cc56b3cd-20231106061928902800000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:878062643785:targetgroup/my-target-group/94c137c9cc56b3cd",
            "target_id": "i-023cf3ad81b634243"
          },
          "dependencies": [
            "aws_instance.prj2_mahi_web_instance",
            "aws_lb_target_group.prj2_mahi_tg",
            "aws_security_group.http-ssh",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "prj2_mahi_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016b89be0b32fe96e",
            "association_id": "eipassoc-005ef27c3dc4cddf2",
            "connectivity_type": "public",
            "id": "nat-0e117c60076ee3ef8",
            "network_interface_id": "eni-03de95f7a8fae2b8e",
            "private_ip": "10.0.0.10",
            "public_ip": "44.195.238.58",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-077fb99ff250f0749"
          },
          "dependencies": [
            "aws_eip.prj2_mahi_eip",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a4d01559b6b8f8be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e117c60076ee3ef8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a4d01559b6b8f8be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.prj2_mahi_eip",
            "aws_nat_gateway.prj2_mahi_nat",
            "aws_route_table.prj2_mahi_pvt_rt",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024ea4619662f6522",
            "id": "r-rtb-0e3d0729886a773191080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3d0729886a77319",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prj2_mahi_igw",
            "aws_route_table.prj2_mahi_pub_rt",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prj2_mahi_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:route-table/rtb-0e3d0729886a77319",
            "id": "rtb-0e3d0729886a77319",
            "owner_id": "878062643785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024ea4619662f6522",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRJ2_PUB_RT"
            },
            "tags_all": {
              "Name": "PRJ2_PUB_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prj2_mahi_pvt_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:route-table/rtb-0a4d01559b6b8f8be",
            "id": "rtb-0a4d01559b6b8f8be",
            "owner_id": "878062643785",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e117c60076ee3ef8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PRJ2_PVT_RT"
            },
            "tags_all": {
              "Name": "PRJ2_PVT_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prj2_mahi_pub_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a59c588a81105c61",
            "route_table_id": "rtb-0e3d0729886a77319",
            "subnet_id": "subnet-077fb99ff250f0749"
          },
          "dependencies": [
            "aws_route_table.prj2_mahi_pub_rt",
            "aws_subnet.prj2_mahi_pub_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prj2_mahi_pvt_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04fdb878eb569e869",
            "route_table_id": "rtb-0a4d01559b6b8f8be",
            "subnet_id": "subnet-0a38d67164ae89555"
          },
          "dependencies": [
            "aws_route_table.prj2_mahi_pvt_rt",
            "aws_subnet.prj2_mahi_pvt_sub",
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:security-group/sg-0e7ab40b5f31e9cda",
            "description": "Allow ssh_ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e7ab40b5f31e9cda",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "878062643785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "http_ssh"
            },
            "tags_all": {
              "Name": "http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prj2_mahi_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:security-group/sg-0d0a755d99a50ec08",
            "description": "Allow_ssh_mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a755d99a50ec08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow_ssh_mysql",
            "name_prefix": "",
            "owner_id": "878062643785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_rds"
            },
            "tags_all": {
              "Name": "allow_rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prj2_mahi_pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:subnet/subnet-077fb99ff250f0749",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077fb99ff250f0749",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878062643785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRJ2_PUB_SB"
            },
            "tags_all": {
              "Name": "PRJ2_PUB_SB"
            },
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prj2_mahi_pvt_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:subnet/subnet-0a38d67164ae89555",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a38d67164ae89555",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878062643785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PRJ2_PVT_SB"
            },
            "tags_all": {
              "Name": "PRJ2_PVT_SB"
            },
            "vpc_id": "vpc-07a0843128da2402b"
          },
          "dependencies": [
            "aws_vpc.prj2_mahi"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prj2_mahi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878062643785:vpc/vpc-07a0843128da2402b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04ca44ee1e898bd93",
            "default_route_table_id": "rtb-0c490cd33e3669c5d",
            "default_security_group_id": "sg-0f785f2da0cf10d01",
            "dhcp_options_id": "dopt-06e4f214b2d0d0c9e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07a0843128da2402b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c490cd33e3669c5d",
            "owner_id": "878062643785",
            "tags": {
              "Name": "PRJ2"
            },
            "tags_all": {
              "Name": "PRJ2"
            }
          }
        }
      ]
    }
  ]
}